# pproc

./: .README.swp  .gitignore  .pts.swp  LICENSE  MANIFEST.in  O1280.grib1  README  README.md  README.rst  ci_ensms.yaml  compute.mars  ecc.py  pts  pyproject.toml  requirements.txt  setup.py  spectrum.py  test_fdb_mir.py
.github/workflows/: cd.yml  sync.yml  test-pypi.yml
cmir/: CMakeLists.txt  cmir.cc  cmir.h  config.cc
eccodeshl/: setup.py
eccodeshl/eccodeshl/: message.py
examples/: compute_efi.sh  test_efi.py  test_fdb_mir.py  test_sot.py
examples/pts/: StrikeProbability
integration_tests/: check_grib.sh  grib_compare.sh  param_131060.mars  param_131060_24.mars  param_131064.mars  param_131068_12.mars  param_131068_24.mars  param_131070.mars  param_131073.mars  param_131074.mars  param_131078.mars
integration_tests/prob/: param_131064.mars  param_131068.mars  param_131073.mars  param_131074.mars  param_131078.mars  (+3 more)
original/: 2014-09-08_14-56-54_rot_div_KE_spectrum.nils.grib_api.1279_FLT_scaled.sh  2014-09-24_09-15-15_rot_div_KE_spectrum.nils.grib_api.1279_FLT_scaled.1.sh  2014-09-24_09-17-11_rot_div_KE_spectrum.nils.grib_api.1279_FLT_scaled.2.sh  2015-01-09_10-04-39_rot_div_KE_spectrum.nils.grib_api.1279_FLT_scaled_noise_XIDT.sh  2015-01-14_13-49-57_rot_div_KE_spectrum.nils.grib_api.scalar.T_scaled.1.sh  2015-01-14_13-50-25_rot_div_KE_spectrum.nils.grib_api.scalar.T_scaled.sh  2015-02-27_14-27-29_rot_div_KE_spectrum.nils.grib_api.scalar.orog_scaled.1.sh  2015-05-07_15-58-54_rot_div_KE_spectrum.nils.grib_api.1279_FLT_scaled.EI.sh  2015-08-11_16-56-02_spec_res_15iter_2_sp.grib  2015-08-11_16-56-02_spec_res_1iter_2_sp.grib  2015-08-11_16-56-02_spec_res_5iter_2_sp.grib  2015-08-11_16-56-58_rot_div_KE_spectrum.nils.grib_api.scalar.residual_scaled.sh  2016-02-03_11-48-34_rot_div_KE_spectrum.nils.grib_api.TCo639.sh  2016-02-03_19-54-21_rot_div_KE_spectrum.nils.grib_api.TCo639msum.sh  2016-11-04_11-12-54_rot_div_KE_spectrum.nils.grib_api.7999_scaled.sh  2016-11-10_08-24-16_rot_div_KE_spectrum.nils.grib_api.7999_not_compensated_lin_log_Lindborg.sh  2016-11-10_09-13-10_rot_div_KE_spectrum.nils.grib_api.scalar._lin_log_Lindborg.sh  2017-01-26_16-43-39_rot_div_KE_spectrum.nils.grib_api.scalar.orog_scaled.sh  2017-02-08_22-41-43_rot_div_KE_spectrum.nils.grib_api.scalar.orog_scaled_vor.sh  rot_div_KE_spectrum.nils.grib_api.1279_FLT_scaled.3  rot_div_KE_spectrum.nils.grib_api.1279_FLT_scaled.4
ppop/: setup.py
pproc/: setup.py
pproc-bundle/: .gitignore  bundle-build  bundle-create  bundle.yml
pproc-ci/: pproc-ci.py
pymir/: pymir.py
suite/: bootstrap_fdb.sh  nodes.py  populate_fdb.sh  ppop_ci.py  template_hpc.yaml
tests/: conftest.py  efi.py  ensms.yaml  helpers.py  test_eccodes.py  test_efi.py  test_ensms.py  test_ensms.yaml  test_paramid.py  test_prepeps.py  test_products.py  test_spectral_order.py  test_window.py
(+210 files in other folders)
